--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,7 @@ section {
 /* Hero Section */
 #hero {
     height: 100vh;
-    background: url('images/BYDHT_w_goat.png') no-repeat center center;
+    background: url('images/ydht_awards_bg.png') no-repeat center center;
     background-size: cover;
     background-attachment: fixed;
     position: relative;
